# random-transfers

./: .gitignore  README.md  experiments.py  experiments_school.py  pyproject.toml  run_jobs.sh
data/: cambridge_2003.csv  cambridge_2005.csv  cambridge_2007.csv  cambridge_2009.csv  cambridge_2011.csv  cambridge_2013.csv  cambridge_2015.csv  cambridge_school_2003.csv  cambridge_school_2005.csv  cambridge_school_2007.csv  cambridge_school_2009.csv  cambridge_school_2011.csv  cambridge_school_2013.csv  cambridge_school_2015.csv  cambridge_school_2017.csv  old_rt.json
data/auxillary/: cand_names_2003.json  cand_names_2005.json  cand_names_2007.json  cand_names_2009.json  cand_names_2011.json  cand_names_2013.json  cand_names_2015.json
data/cambridge_city/: Cambridge City Council CVR 2003.xlsx - Orderings.csv  Cambridge City Council CVR 2005.xlsx - Orderings.csv  Cambridge City Council CVR 2007.xlsx - Orderings.csv  Cambridge City Council CVR 2011.xlsx - Orderings.csv  Cambridge City Council CVR 2013.xlsx - Orderings.csv  Cambridge City Council CVR 2015.xlsx - Orderings.csv  Cambridge City Council CVR 2017.xlsx - Orderings.csv  cambridge_2009_by_race.csv
data/cambridge_school/: Cambridge_2003_SchoolCommittee.csv  Cambridge_2005_SchoolCommittee.csv  Cambridge_2007_SchoolCommittee.csv  Cambridge_2009_SchoolCommittee.csv  Cambridge_2011_SchoolCommittee.csv  Cambridge_2013_SchoolCommittee.csv  Cambridge_2015_SchoolCommittee.csv  Cambridge_2017_SchoolCommittee.csv
notebooks/: cambridge.ipynb  rename.ipynb  scratch.ipynb
(+7 files in other folders)
