[tool.poetry]
name = "random-transfers"
version = "0.1.0"
description = ""
authors = ["Jack Gibson <jpgibson@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
votekit = "^2.0.0"
jsonlines = "^4.0.0"
pandas = "1.5.3"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
